unpackaged/main/default/objects/CampaignMember/fields/Campaign_Related_Seller_Details__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Related_Seller_Details__c</fullName>
    <description>us-7157</description>
    <label>Campaign Related Seller Details</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>