unpackaged/main/default/objects/CampaignMember/fields/Campaign_Status__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Status__c</fullName>
    <description>US-0012126</description>
    <formula>Text(Campaign.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Status</label>
    <type>Text</type>
</CustomField>