unpackaged/main/default/objects/CampaignMember/fields/Date_sent_completed__c.field-meta.xml
<CustomField>
    <fullName>Date_sent_completed__c</fullName>
    <description>US-0011525 - Expose Campaign detail on Customer account - AC2</description>
    <label>Date sent / completed</label>
    <type>DateTime</type>
</CustomField>