unpackaged/main/default/objects/CampaignMember/fields/EBH_CampaignCockpit__c.field-meta.xml
<CustomField>
    <fullName>EBH_CampaignCockpit__c</fullName>
    <description>[EBH] (EPH-2201) : Internal Campaign ID</description>
    <inlineHelpText>Internal Campaign ID</inlineHelpText>
    <label>Campaign Cockpit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>