unpackaged/main/default/objects/CampaignMember/fields/EBH_CampaignProvider__c.field-meta.xml
<CustomField>
    <fullName>EBH_CampaignProvider__c</fullName>
    <description>[EBH] (EPH-1881) : External Provider Reference ID</description>
    <label>Campaign Provider</label>
    <length>20</length>
    <type>Text</type>
</CustomField>