unpackaged/main/default/objects/CampaignMember/fields/EBH_CockpitResultId__c.field-meta.xml
<CustomField>
    <fullName>EBH_CockpitResultId__c</fullName>
    <description>[EBH] (EPH-2201) : Internal Campaign ID</description>
    <externalId>true</externalId>
    <label>Cockpit Result Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>