unpackaged/main/default/objects/CampaignMember/fields/EBH_ContactDetails__c.field-meta.xml
<CustomField>
    <fullName>EBH_ContactDetails__c</fullName>
    <description>[EBH] (EPH-3175) : Contact Details. Get Contact Email and Phone Number.</description>
    <formula>IF(
 ISBLANK(Contact.Email), Contact.Phone,
  IF(ISBLANK(Contact.Phone), Contact.Email, Contact.Email &amp; &quot;/&quot; &amp; Contact.Phone
  )
)</formula>
    <label>Contact Details</label>
    <type>Text</type>
</CustomField>