unpackaged/main/default/objects/CampaignMember/fields/EBH_ContactEmail__c.field-meta.xml
<CustomField>
    <fullName>EBH_ContactEmail__c</fullName>
    <description>[EBH] (EPH-116) : Contact Email Address (Primary key to contact in SF, in case CONTACT_SF_ID is empty)</description>
    <formula>Contact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>