unpackaged/main/default/objects/CampaignMember/fields/EBH_ContactFullName__c.field-meta.xml
<CustomField>
    <fullName>EBH_ContactFullName__c</fullName>
    <description>[EBH] (EPH-116) : Contact full name</description>
    <formula>HYPERLINK(&quot;/&quot; &amp; ContactId, Contact.FirstName &amp; &quot; &quot; &amp; Contact.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contact full name</inlineHelpText>
    <label>Contact Full Name</label>
    <type>Text</type>
</CustomField>