unpackaged/main/default/objects/CampaignMember/fields/EBH_Customer__c.field-meta.xml
<CustomField>
    <fullName>EBH_Customer__c</fullName>
    <description>[EBH] (EPH-116) : Account Name</description>
    <formula>HYPERLINK( &#39;/&#39;+Contact.Account.Id , Contact.Account.Name, &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer</label>
    <type>Text</type>
</CustomField>