unpackaged/main/default/objects/CampaignMember/fields/EBH_EbayAccountName__c.field-meta.xml
<CustomField>
    <fullName>EBH_EbayAccountName__c</fullName>
    <description>[EBH] (EPH-116) : Seller eBay Account Name</description>
    <formula>EBH_Seller__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ebay Account Name</label>
    <type>Text</type>
</CustomField>