unpackaged/main/default/objects/CampaignMember/fields/EBH_LastResponseDate__c.field-meta.xml
<CustomField>
    <fullName>EBH_LastResponseDate__c</fullName>
    <description>[EBH] (EPH-1912) : Date of LAST response of the contact in this campaign</description>
    <label>Last Response Date</label>
    <type>Date</type>
</CustomField>