unpackaged/main/default/objects/CampaignMember/fields/EBH_Launch__c.field-meta.xml
<CustomField>
    <fullName>EBH_Launch__c</fullName>
    <description>[EBH] (EPH-2201) : Internal Campaign Launch ID</description>
    <label>Launch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>