unpackaged/main/default/objects/CampaignMember/fields/EBH_ResponseCode__c.field-meta.xml
<CustomField>
    <fullName>EBH_ResponseCode__c</fullName>
    <defaultValue>10</defaultValue>
    <description>[EBH] (EPH-1912) :Response Code Unified</description>
    <label>Response Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>