unpackaged/main/default/objects/CampaignMember/fields/EBH_ResponseDayRelative__c.field-meta.xml
<CustomField>
    <fullName>EBH_ResponseDayRelative__c</fullName>
    <description>[EBH] (EPH-1912) :Day of First Response relative (integer -&gt; number of days since the start of the campaign)</description>
    <label>Response Day Relative</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>