unpackaged/main/default/objects/CampaignMember/fields/EBH_Responses__c.field-meta.xml
<CustomField>
    <fullName>EBH_Responses__c</fullName>
    <description>[EBH] (EPH-1912) :Total Responses Count</description>
    <label>Responses</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>