unpackaged/main/default/objects/CampaignMember/fields/EBH_Results__c.field-meta.xml
<CustomField>
    <fullName>EBH_Results__c</fullName>
    <description>[EBH] (EPH-1912) :Response</description>
    <label>Response</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Queue</fullName>
            </value>
            <value>
                <fullName>Failed (Blocked)</fullName>
            </value>
            <value>
                <fullName>Failed (Wrong Details)</fullName>
            </value>
            <value>
                <fullName>Failed (Timeout)</fullName>
            </value>
            <value>
                <fullName>Not Reached</fullName>
            </value>
            <value>
                <fullName>Reached - No Action</fullName>
            </value>
            <value>
                <fullName>Reached - Not Interested</fullName>
            </value>
            <value>
                <fullName>Reached - Unsubscribe</fullName>
            </value>
            <value>
                <fullName>Reached - Interested</fullName>
            </value>
            <value>
                <fullName>Reached - Committed</fullName>
            </value>
            <value>
                <fullName>Reached - Acted</fullName>
            </value>
            <value>
                <fullName>Unknown Result</fullName>
            </value>
            <value>
                <fullName>Targeted</fullName>
            </value>
            <value>
                <fullName>Block Bounce</fullName>
            </value>
            <value>
                <fullName>Hard Bounce</fullName>
            </value>
            <value>
                <fullName>Soft Bounce</fullName>
            </value>
            <value>
                <fullName>Not Opened</fullName>
            </value>
            <value>
                <fullName>Opened</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Unsubscribed</fullName>
            </value>
            <value>
                <fullName>Clicked</fullName>
            </value>
            <value>
                <fullName>Committed to Act</fullName>
            </value>
            <value>
                <fullName>Call Planned</fullName>
            </value>
            <value>
                <fullName>Phone Blacklist</fullName>
            </value>
            <value>
                <fullName>Wrong Phone Number</fullName>
            </value>
            <value>
                <fullName>Call Not Answered</fullName>
            </value>
            <value>
                <fullName>DMC Not Reached</fullName>
            </value>
            <value>
                <fullName>DMC Not Interested</fullName>
            </value>
            <value>
                <fullName>Unsubscribe</fullName>
            </value>
            <value>
                <fullName>DMC Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>