unpackaged/main/default/objects/CampaignMember/fields/EBH_Seller__c.field-meta.xml
<CustomField>
    <fullName>EBH_Seller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[EBH] (EPH-2201) : Seller Oracle ID</description>
    <label>Seller</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>EBH_Seller</relationshipName>
    <type>Lookup</type>
</CustomField>