unpackaged/main/default/objects/CampaignMember/fields/EBH_Serial__c.field-meta.xml
<CustomField>
    <fullName>EBH_Serial__c</fullName>
    <description>[EBH] (EPH-2201) : Hidden serial # for custom pagination</description>
    <displayFormat>{0000000000}</displayFormat>
    <inlineHelpText>Hidden serial # for custom pagination</inlineHelpText>
    <label>Serial #</label>
    <type>AutoNumber</type>
</CustomField>