unpackaged/main/default/objects/CampaignMember/fields/EBH_SerialF__c.field-meta.xml
<CustomField>
    <fullName>EBH_SerialF__c</fullName>
    <description>[EBH] (EPH-2201) : Hidden serial # for custom pagination</description>
    <formula>VALUE(EBH_Serial__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Hidden serial # for custom pagination</inlineHelpText>
    <label>Serial #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>