unpackaged/main/default/objects/CampaignMember/fields/IER_ID__c.field-meta.xml
<CustomField>
    <fullName>IER_ID__c</fullName>
    <description>US-0011585 - Include IER Campaign member</description>
    <inlineHelpText>IER Salesforce ID</inlineHelpText>
    <label>IER Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>