unpackaged/main/default/objects/CampaignMember/fields/Marketing_Cloud_Status__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Cloud_Status__c</fullName>
    <description>US-0007007 [Sub Campaign]Cancellation of Campaign Member via Journey Builder</description>
    <label>Marketing Cloud Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>