unpackaged/main/default/objects/CampaignMember/fields/Oracle_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_ID__c</fullName>
    <description>EPH-6484 Add campaign members in SFMC journeys</description>
    <label>Oracle ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>