unpackaged/main/default/objects/CampaignMember/fields/PriorityOrder__c.field-meta.xml
<CustomField>
    <fullName>PriorityOrder__c</fullName>
    <description>US-0007006</description>
    <label>Priority Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>