unpackaged/main/default/objects/CampaignMember/fields/Related_Task__c.field-meta.xml
<CustomField>
    <fullName>Related_Task__c</fullName>
    <description>US-0011525 - Expose Campaign detail on Customer account</description>
    <label>Related Task</label>
    <length>18</length>
    <type>Text</type>
</CustomField>