unpackaged/main/default/objects/CampaignMember/fields/Response_Details__c.field-meta.xml
<CustomField>
    <fullName>Response_Details__c</fullName>
    <description>EPH-6845</description>
    <label>Response Details</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Suspended account</fullName>
            </value>
            <value>
                <fullName>Deleted account</fullName>
            </value>
            <value>
                <fullName>Permanent selling restriction</fullName>
            </value>
            <value>
                <fullName>No consent to phone calls</fullName>
            </value>
            <value>
                <fullName>Account registered on a different eBay site</fullName>
            </value>
            <value>
                <fullName>No active listings</fullName>
            </value>
            <value>
                <fullName>BSTD</fullName>
            </value>
            <value>
                <fullName>Other – please specify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>