unpackaged/main/default/objects/CampaignMember/fields/Show_Details__c.field-meta.xml
<CustomField>
    <fullName>Show_Details__c</fullName>
    <description>US-0011525 - Expose Campaign detail on Customer account
US-0011887</description>
    <formula>IF(  NOT( ISBLANK( Related_Task__c ) ) 
     , HYPERLINK(&quot;/&quot; &amp; Related_Task__c, &quot;Related Task&quot;, &quot;_blank&quot;) 
     , IF( NOT( ISBLANK(  IER_ID__c  ) ) 
           , HYPERLINK(&quot;/&quot; &amp; IER_ID__c , &quot;Individual Email Results&quot;, &quot;_blank&quot;) 
           , &quot;&quot;
       ) 
)</formula>
    <label>Show Details</label>
    <type>Text</type>
</CustomField>