unpackaged/main/default/objects/CampaignMember/fields/Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Date__c</fullName>
    <description>EPH-7043 &quot;Target Date&quot; in campaign-members. Email &amp; GCX</description>
    <label>Target Date</label>
    <type>Date</type>
</CustomField>