unpackaged/main/default/objects/CampaignMember/validationRules/EBH_ResponseCodeValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>EBH_ResponseCodeValidation</fullName>
    <active>false</active>
    <description>EPH-1912, US-0007080</description>
    <errorConditionFormula>(EBH_ResponseCode__c &lt; 0 ||
 EBH_ResponseCode__c &gt; 100) &amp;&amp; NOT( $Setup.ActiveValidationRules__c.All_Validation_Rules_Deactivated__c )</errorConditionFormula>
    <errorDisplayField>EBH_ResponseCode__c</errorDisplayField>
    <errorMessage>Response Code will be a number between 0 &amp; 100.</errorMessage>
</ValidationRule>